<resources>
    <string name="app_name">LinearLayout</string>

    <string name="increment_button_text">Increment Count</string>

    <string name="short_text">Attendance Counter Application Attendance Counter Application Attendance Counter Application Attendance Counter Application</string>

    <string name="long_text">orem ipsum dolor sit amet, consectetur adipiscing elit. Etiam et varius sem. Aliquam nec ultrices enim. Phasellus mattis erat porta, ornare dui in, euismod tellus. In hac habitasse platea dictumst. Sed congue congue maximus. Mauris sollicitudin sodales tincidunt. Integer sed elementum libero. Curabitur fermentum enim eu nibh lacinia sagittis. Vestibulum porttitor nisl dignissim lacinia maximus. Fusce dapibus sapien a dapibus ullamcorper.

In hac habitasse platea dictumst. Aliquam sit amet fermentum velit, ut sodales lacus. Duis non ultrices risus. Vestibulum auctor mi nibh, at convallis nibh lacinia vel. Mauris id rhoncus mauris. Fusce vitae erat et augue vehicula efficitur ut ut neque. Praesent turpis nunc, commodo vel nulla nec, luctus scelerisque odio. Proin eleifend imperdiet venenatis. Nam ipsum nibh, vulputate dignissim consequat rhoncus, commodo vel odio.

Phasellus sit amet sem non mauris faucibus varius. Donec facilisis leo et urna finibus, non vestibulum arcu mollis. Phasellus feugiat aliquet ultricies. Curabitur ultricies vehicula ante. Nunc aliquam nibh in augue pharetra bibendum. Mauris eget leo ante. Quisque elementum posuere leo, eu malesuada orci mattis nec. Sed turpis nibh, consectetur eget pretium eu, sagittis mollis ipsum. Ut sit amet aliquet odio. Etiam porttitor ipsum sed sapien scelerisque pretium. Suspendisse a diam quis tortor sodales egestas non in sem. Vivamus ut metus ac quam pretium ultricies ornare id lacus. In ante purus, volutpat sit amet suscipit vitae, volutpat ac velit. Etiam ut neque viverra, dictum metus sit amet, porttitor urna. Nulla sodales aliquet erat. Maecenas eu magna eget nunc ornare suscipit.

Proin interdum suscipit nulla, a efficitur erat sollicitudin sed. Quisque vitae dolor sed ante mattis iaculis. Nullam id justo elit. Duis aliquet eget elit et aliquam. Suspendisse vulputate efficitur ipsum, egestas dictum leo. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Aenean commodo lacinia risus eget consectetur. Donec nec mattis purus. In nec ultrices augue. Donec erat arcu, tristique vitae malesuada sit amet, sollicitudin ut tellus. Ut faucibus felis at lacinia egestas. Nulla quis sagittis neque.

Nullam consequat ultricies mattis. Morbi velit orci, porttitor vestibulum augue nec, blandit scelerisque diam. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam finibus felis sed risus lacinia, ut bibendum nulla convallis. Quisque finibus felis vitae diam imperdiet tristique. Maecenas odio nisi, convallis in consectetur in, efficitur vitae mi. In vel elementum leo, in porta dolor. Nam luctus sapien vel fermentum semper. Vestibulum tristique, risus ut tempus malesuada, eros mi egestas sapien, fringilla ultricies tortor risus vitae diam. In congue nunc nec pulvinar consectetur. Praesent tristique dictum libero, eget consectetur dui vulputate et. Aliquam sollicitudin rhoncus orci et pharetra.

Quisque quam risus, porttitor eget nulla vel, mattis auctor risus. Curabitur tempus non est vitae posuere. Vestibulum ac tempor quam. Sed at mattis neque. In eget commodo augue, in rhoncus felis. Ut nec turpis ultricies, semper leo non, ultricies justo. Pellentesque at sapien non arcu elementum fringilla et quis magna.

Pellentesque rhoncus at dolor ut aliquam. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nullam condimentum, dui ut pellentesque placerat, augue diam consectetur elit, vel consequat enim purus id nulla. Phasellus sapien ex, euismod sed metus eget, tempus consequat tortor. Proin non vestibulum erat. In nunc ante, accumsan quis leo nec, pulvinar lobortis nunc. Suspendisse suscipit nunc ut ipsum bibendum porttitor. Etiam mollis ligula posuere, sodales dui in, vehicula turpis. Phasellus et est sem. Proin dapibus sapien in ante posuere tincidunt. In consectetur facilisis facilisis.

Ut dignissim sapien dolor, eu hendrerit ex hendrerit et. Donec venenatis mauris tellus, et bibendum urna vestibulum vel. Nulla sagittis neque dictum elit tempor congue. Duis est nunc, tincidunt at velit vel, pretium imperdiet augue. Mauris sed sapien nulla. Sed sed efficitur mi. Mauris fringilla odio placerat condimentum laoreet. Integer aliquet ligula non nibh volutpat, ut facilisis mauris tristique.

Phasellus egestas eleifend ligula, sed ultricies urna maximus quis. Donec ac elementum risus, a rhoncus justo. Morbi eu congue justo. Nullam dolor est, luctus sit amet ultricies sit amet, luctus vel velit. Duis quis justo ornare, posuere leo sed, euismod leo. Nunc nec ex sodales, faucibus lacus a, feugiat nisl. Nunc sollicitudin facilisis ipsum, vel feugiat sapien pharetra ut. Donec pulvinar aliquam purus, sit amet elementum libero ornare quis. Nullam a urna nisl. Nunc accumsan sodales tristique. Donec ullamcorper iaculis porta. Morbi posuere lacus in sagittis volutpat. Sed mollis purus tempor semper fringilla.

Sed lobortis tellus id justo convallis mattis. Curabitur nibh magna, sollicitudin nec mi vel, lobortis venenatis tortor. Vestibulum vitae suscipit diam, vel venenatis nulla. Praesent et magna hendrerit, feugiat mi condimentum, ultrices velit. Duis malesuada metus nec elit eleifend, quis ornare felis venenatis. Praesent ultrices convallis nisi, non tristique mauris sollicitudin ac. Quisque tortor tortor, vehicula at gravida quis, finibus ut dolor. Vivamus molestie vestibulum porttitor. Ut et urna porttitor, sagittis augue vel, blandit ipsum. Cras ut ante posuere, iaculis dolor vel, tincidunt metus. In luctus augue accumsan, molestie sapien sollicitudin, tristique ante. Nam faucibus erat vel metus gravida, ac aliquam mi gravida.

Vestibulum sodales fringilla leo dignissim sodales. Vivamus condimentum congue mauris ac ullamcorper. Fusce luctus enim a pellentesque convallis. Nunc in ante convallis, pellentesque est vitae, accumsan sem. Suspendisse sit amet mi maximus, condimentum magna quis, fermentum metus. Cras vestibulum ante a orci tristique ultricies sit amet scelerisque massa. Donec pellentesque mattis felis, ac volutpat augue gravida eu. Nullam augue sapien, auctor vel magna tincidunt, pellentesque facilisis quam. Etiam eget egestas nisl, nec ullamcorper ante. Praesent vitae accumsan ligula. Suspendisse odio diam, interdum ullamcorper placerat in, eleifend ut quam. Maecenas vulputate sodales lorem.

Morbi viverra hendrerit aliquam. Duis pretium lectus velit, sed aliquam neque finibus ac. Mauris eu diam eros. Nam sagittis augue ut accumsan tempus. Praesent at posuere nulla. Mauris aliquam ligula non quam viverra, vitae aliquam tortor tempus. In mollis convallis nisi, sit amet consequat neque posuere eu. Cras tincidunt leo aliquet mattis vestibulum. Aenean in enim nec risus faucibus sagittis quis ut nisi. Duis vestibulum turpis a odio rutrum, in volutpat est consequat.

Vivamus venenatis consectetur enim, at fringilla risus. Nullam justo lectus, fermentum a elit at, lacinia efficitur ipsum. Cras ac congue justo. Fusce faucibus condimentum sapien, sit amet condimentum diam maximus at. Donec eros purus, maximus vitae posuere ornare, porta sed diam. Sed vel nulla urna. Aliquam erat volutpat. Ut porttitor sodales eros, eleifend scelerisque purus.

Sed nec sagittis felis, at bibendum ex. Ut et turpis a lectus facilisis congue. Etiam accumsan velit id condimentum rutrum. Pellentesque eu nulla ac est fermentum blandit eget ac odio. Phasellus mattis mi at arcu porttitor tempor. Vivamus tincidunt feugiat gravida. Sed eget viverra nisi.

Cras mollis leo non orci hendrerit tempus. Aenean vitae arcu vitae nibh porttitor scelerisque. Nullam congue odio ut arcu ultrices mollis. Duis aliquet, est sed venenatis consectetur, lectus sapien egestas nisi, a aliquet elit elit ac ipsum. Aliquam volutpat mauris vitae nibh fermentum iaculis. Aliquam dapibus, justo quis ornare dictum, dolor libero interdum libero, eget tristique lorem urna venenatis massa. Suspendisse consectetur ornare vehicula. Phasellus commodo velit felis. Mauris porta eu erat sodales ultrices. Praesent quis euismod augue, eu commodo lorem. Quisque nisi lacus, consectetur ut augue quis, tristique efficitur augue. Integer sapien quam, aliquam id velit in, sagittis gravida eros. Sed aliquet quis dolor et sagittis. Suspendisse sit amet nulla non eros aliquam tincidunt eget sit amet lectus. Sed mollis eros efficitur arcu viverra, vitae efficitur libero vulputate.

Proin eros ipsum, tincidunt non metus sed, viverra imperdiet metus. Donec semper mollis libero vel egestas. In imperdiet viverra sapien nec feugiat. Mauris vehicula quam vulputate felis malesuada, sit amet aliquet elit gravida. Vestibulum et hendrerit arcu. Suspendisse vel dolor eu nulla aliquam finibus. Aliquam lacus nunc, dignissim eu arcu vel, porttitor dignissim leo. Integer dictum dignissim quam, vel tristique purus eleifend et. Aliquam eget urna et eros euismod tincidunt. Mauris nec sem ut nulla lobortis varius. Pellentesque posuere ex vel molestie condimentum. Duis non risus eget leo cursus fringilla. Fusce porta mattis imperdiet. Vestibulum eros elit, semper sollicitudin sapien in, tincidunt euismod dui. Aenean non dolor arcu.

Aenean porta ligula sapien, quis iaculis elit placerat vitae. Donec mattis id urna et molestie. Nulla ornare sed felis quis vulputate. Quisque sed hendrerit nisl. Integer vitae consectetur quam, at sollicitudin diam. Donec non velit non ex vehicula dapibus. Curabitur vulputate sed dolor nec elementum. Maecenas mi mauris, suscipit nec augue vel, porta congue dolor. Sed tristique efficitur tellus eget faucibus.

Morbi auctor metus pretium, feugiat eros sed, malesuada ligula. Suspendisse et lacus tristique, accumsan urna nec, aliquam ex. Nam ullamcorper ligula at nulla vulputate, ut tincidunt mauris pretium. Nunc cursus nisl erat, eu scelerisque massa rutrum eget. Curabitur vulputate, tellus ut feugiat dapibus, est augue pharetra ex, id efficitur mauris ipsum in leo. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Vestibulum congue turpis sed ornare tristique. Phasellus consectetur consequat massa vel tincidunt. Vestibulum neque turpis, convallis elementum diam vel, molestie volutpat justo. Sed laoreet volutpat placerat. Nulla ac risus urna. Mauris luctus, purus sed tristique pellentesque, purus justo vulputate tortor, id faucibus nulla quam non lacus. Fusce interdum imperdiet viverra. Mauris consectetur magna enim, eget vulputate mi porttitor ac.</string>
    <string name="increment_count">Increment Count</string>
    <string name="decrement_count">Decrement Count</string>
</resources>